--- a/index/css/small.css
+++ b/index/css/small.css
@@ -1,21 +1,7 @@
 :root {
     --main-shadow: 0, 0, 0, 0.5;
 }
-body {
-    max-width: 800px;
-    min-width: 215px;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: sans-serif;  
-}
-h1 {
-    font-size: 2rem;
-}
-h2 {
-    font-size: 1.75rem;
-    margin-top: 22px;
-    margin-bottom: 22px;
-}
+/*-------------Page Header------------------*/
 body header {
     background-color: RGB(135, 68, 68);
     color: white;
@@ -36,7 +22,30 @@ body header h1 {
     padding-bottom: 20px;
     margin: 0;
 }
-
+/*----------------------------------------*/
+/*---------------body general-------------*/
+body {
+    max-width: 800px;
+    min-width: 215px;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: sans-serif;  
+}
+h1 {
+    font-size: 2rem;
+}
+h2 {
+    font-size: 1.75rem;
+    margin-top: 22px;
+    margin-bottom: 22px;
+}
+/*----------------------------------------*/
+/*----------table of contents-------------*/
+.hidden {
+    display: none;
+}
+/*----------------------------------------*/
+/*---------------footer-------------------*/
 footer {
     background-color: RGB(135, 68, 68);
     height: auto;
@@ -60,3 +69,4 @@ footer a {
 footer a:hover {
     color: gold;
 }
+/*------------------------------------------*/
